fix(03): revise plans based on checker feedback

--- a/.planning/phases/03-belief-store/03-01-PLAN.md
+++ b/.planning/phases/03-belief-store/03-01-PLAN.md
@@ -1,7 +1,7 @@
 ---
 phase: 03-belief-store
 plan: 01
-type: tdd
+type: execute
 wave: 1
 depends_on: []
 files_modified:
@@ -60,51 +60,70 @@ Output: Working repository that can save and retrieve comprehensions.
 @src/comprehension/schema/confidence.py
 </context>
 
-<feature>
-  <name>SQLite Comprehension Repository</name>
-  <files>src/comprehension/store/repository.py, src/comprehension/store/migrations.py, tests/test_repository.py</files>
-  <behavior>
-    Repository provides CRUD operations for Comprehension persistence:
+<tasks>
 
-    1. add(comprehension) -> None
-       - Inserts new or updates existing (INSERT OR REPLACE)
-       - Stores full model as JSON in data column
-       - Extracts indexed fields: id, domain, topic, confidence, created, updated, version, verified
+<task type="auto">
+  <name>Task 1: Create migrations and schema</name>
+  <files>src/comprehension/store/__init__.py, src/comprehension/store/migrations.py</files>
+  <action>
+    Create src/comprehension/store/ directory and migrations.py:
 
-    2. get(id) -> Comprehension | None
-       - Returns deserialized Comprehension or None if not found
-       - Uses Pydantic model_validate_json() for deserialization
+    ```python
+    def ensure_schema(conn: sqlite3.Connection) -> None:
+        """Create tables and indexes if they don't exist."""
+    ```
 
-    3. delete(id) -> bool
-       - Removes comprehension by ID
-       - Returns True if deleted, False if not found
-
-    4. count() -> int
-       - Returns total comprehension count
-
-    Schema (migrations.py):
-    - comprehensions table with indexed columns
+    Schema:
+    - comprehensions table with columns: id (PK), domain, topic, confidence, created, updated, version, verified, data (JSON blob)
+    - Indexes on domain, confidence, updated
+    - Schema version tracking table
     - FTS5 virtual table for topic search (triggers in 03-02)
-    - Schema version tracking
 
-    Test cases:
+    Create __init__.py with imports for SQLiteComprehensionRepository (to be created in Task 2).
+  </action>
+  <verify>python -c "from comprehension.store.migrations import ensure_schema; print('Migration module loads')"</verify>
+  <done>migrations.py creates comprehensions table with proper schema and indexes</done>
+</task>
+
+<task type="auto">
+  <name>Task 2: Implement SQLiteComprehensionRepository</name>
+  <files>src/comprehension/store/repository.py, tests/test_repository.py</files>
+  <action>
+    Create SQLiteComprehensionRepository class with CRUD operations:
+
+    ```python
+    class SQLiteComprehensionRepository:
+        def __init__(self, db_path: str | Path):
+            # Stores path, calls _ensure_schema()
+
+        def add(self, comprehension: Comprehension) -> None:
+            # INSERT OR REPLACE, stores model_dump_json() in data column
+            # Extracts indexed fields: id, domain, topic, confidence, created, updated, version, verified
+
+        def get(self, id: str) -> Comprehension | None:
+            # Returns deserialized Comprehension or None
+            # Uses Pydantic model_validate_json()
+
+        def delete(self, id: str) -> bool:
+            # Removes by ID, returns True if deleted
+
+        def count(self) -> int:
+            # Returns total count
+    ```
+
+    Create tests/test_repository.py with test cases:
     - test_add_and_get: Save, retrieve, verify match
     - test_add_updates_existing: Second save updates, version increments
     - test_get_missing: Returns None for unknown ID
     - test_delete: Removes comprehension, get returns None
     - test_count: Tracks total stored
     - test_persists_across_sessions: Close conn, reopen, data still there
-  </behavior>
-  <implementation>
-    1. Create src/comprehension/store/ directory
-    2. migrations.py: ensure_schema(conn) creates tables and indexes
-    3. repository.py: SQLiteComprehensionRepository class
-       - __init__(db_path: str | Path) stores path, calls _ensure_schema()
-       - Uses context manager for connection per operation
-       - Stores comprehension.model_dump_json() in data column
-       - Extracts indexed fields for efficient queries
-  </implementation>
-</feature>
+  </action>
+  <verify>pytest tests/test_repository.py -v</verify>
+  <done>All repository tests pass; comprehensions round-trip correctly through SQLite</done>
+</task>
+
+</tasks>
 
 <verification>
 ```bash
