--- a/.planning/phases/03-belief-store/03-02-PLAN.md
+++ b/.planning/phases/03-belief-store/03-02-PLAN.md
@@ -1,7 +1,7 @@
 ---
 phase: 03-belief-store
 plan: 02
-type: tdd
+type: execute
 wave: 2
 depends_on: ["03-01"]
 files_modified:
@@ -63,45 +63,62 @@ Output: Repository methods for all retrieval dimensions with proper indexing.
 @src/comprehension/store/migrations.py
 </context>
 
-<feature>
-  <name>Multi-dimensional Comprehension Retrieval</name>
-  <files>src/comprehension/store/repository.py, src/comprehension/store/queries.py, src/comprehension/store/migrations.py, tests/test_repository.py</files>
-  <behavior>
-    Repository adds retrieval methods:
+<tasks>
 
-    1. find_by_domain(domain: str) -> List[Comprehension]
-       - Returns all comprehensions in a domain
-       - Ordered by updated DESC
+<task type="auto">
+  <name>Task 1: Add FTS5 schema and queries module</name>
+  <files>src/comprehension/store/migrations.py, src/comprehension/store/queries.py</files>
+  <action>
+    Update migrations.py to add FTS5 virtual table:
+    - Create comprehensions_fts virtual table with Porter stemmer tokenizer
+    - Add INSERT/UPDATE/DELETE triggers to keep FTS5 in sync
+    - Check for FTS5 availability
 
-    2. find_by_topic(query: str, limit: int = 10) -> List[Comprehension]
-       - Full-text search on topic field using FTS5
-       - BM25 ranking for relevance
-       - Returns top N matches
+    Create queries.py with helper functions:
+    ```python
+    CONFIDENCE_ORDER = {
+        ConfidenceLevel.UNKNOWN: 0,
+        ConfidenceLevel.LOW: 1,
+        ConfidenceLevel.MEDIUM: 2,
+        ConfidenceLevel.HIGH: 3
+    }
 
-    3. find_by_confidence(min_confidence: ConfidenceLevel) -> List[Comprehension]
-       - Returns comprehensions at or above confidence level
-       - Uses CONFIDENCE_ORDER mapping: UNKNOWN=0, LOW=1, MEDIUM=2, HIGH=3
-       - Ordered by updated DESC
+    def build_filter_query(...) -> str:
+        """Build SQL query with optional filters."""
 
-    4. find_recent(limit: int = 10) -> List[Comprehension]
-       - Returns most recently updated comprehensions
-       - Ordered by updated DESC
+    def build_confidence_filter(min_level: ConfidenceLevel) -> str:
+        """Build SQL fragment for confidence filtering."""
+    ```
+  </action>
+  <verify>python -c "from comprehension.store.queries import CONFIDENCE_ORDER, build_filter_query; print('Queries module loads')"</verify>
+  <done>FTS5 virtual table exists with triggers; queries.py provides helper functions</done>
+</task>
 
-    5. find(domain: str | None, min_confidence: ConfidenceLevel | None, topic_query: str | None, limit: int = 20) -> List[Comprehension]
-       - Combines all filters
-       - Any parameter can be None (not applied)
-       - Always ordered by updated DESC
+<task type="auto">
+  <name>Task 2: Implement retrieval methods on repository</name>
+  <files>src/comprehension/store/repository.py, tests/test_repository.py</files>
+  <action>
+    Extend SQLiteComprehensionRepository with retrieval methods:
 
-    Schema updates (migrations.py):
-    - Add FTS5 virtual table: comprehensions_fts
-    - Add triggers to keep FTS5 in sync with main table
-    - Porter stemmer tokenizer for linguistic matching
+    ```python
+    def find_by_domain(self, domain: str) -> List[Comprehension]:
+        # Returns all comprehensions in domain, ordered by updated DESC
 
-    queries.py:
-    - CONFIDENCE_ORDER dict mapping ConfidenceLevel to int
-    - build_filter_query() helper for SQL construction
+    def find_by_topic(self, query: str, limit: int = 10) -> List[Comprehension]:
+        # FTS5 search with BM25 ranking
 
-    Test cases:
+    def find_by_confidence(self, min_confidence: ConfidenceLevel) -> List[Comprehension]:
+        # Uses CONFIDENCE_ORDER mapping, ordered by updated DESC
+
+    def find_recent(self, limit: int = 10) -> List[Comprehension]:
+        # Most recently updated, ordered by updated DESC
+
+    def find(self, domain: str | None, min_confidence: ConfidenceLevel | None,
+             topic_query: str | None, limit: int = 20) -> List[Comprehension]:
+        # Combined filters, any can be None
+    ```
+
+    Add tests to tests/test_repository.py:
     - test_find_by_domain: Filters correctly
     - test_find_by_domain_empty: Returns empty list if no match
     - test_find_by_topic_fts: Full-text search works
@@ -109,25 +126,12 @@ Output: Repository methods for all retrieval dimensions with proper indexing.
     - test_find_by_confidence: HIGH returns HIGH only, MEDIUM returns HIGH+MEDIUM
     - test_find_recent: Returns correct order, respects limit
     - test_find_combined: Domain + confidence + limit work together
-  </behavior>
-  <implementation>
-    1. Update migrations.py:
-       - Add comprehensions_fts virtual table
-       - Add INSERT/UPDATE/DELETE triggers
-       - Check for FTS5 availability
+  </action>
+  <verify>pytest tests/test_repository.py -v -k "find"</verify>
+  <done>All retrieval tests pass; FTS5 search works with stemming; combined queries functional</done>
+</task>
 
-    2. Create queries.py:
-       - CONFIDENCE_ORDER = {UNKNOWN: 0, LOW: 1, MEDIUM: 2, HIGH: 3}
-       - build_confidence_filter(min_level) -> SQL fragment
-
-    3. Extend repository.py:
-       - Add find_by_domain()
-       - Add find_by_topic() with FTS5 JOIN
-       - Add find_by_confidence() with CASE expression
-       - Add find_recent()
-       - Add find() combining all filters
-  </implementation>
-</feature>
+</tasks>
 
 <verification>
 ```bash
