--- a/.planning/phases/03-belief-store/03-03-PLAN.md
+++ b/.planning/phases/03-belief-store/03-03-PLAN.md
@@ -133,9 +133,45 @@ Output: Complete belief store system ready for agent integration.
     - test_is_content_available: Returns False after pruning
     - test_get_referencing_comprehensions: Returns correct list
     - test_get_prunable: Integration with ObservationLifecycle
+    - test_observation_refs_retained_after_prune: After mark_content_pruned(), the comprehension.observations list still contains the observation ID (validates key memory-efficiency principle: references persist even when content is deleted)
   </action>
-  <verify>pytest tests/test_observation_index.py -v</verify>
-  <done>ObservationIndex tracks references and pruning status; integrates with ObservationLifecycle</done>
+  <verify>pytest tests/test_observation_index.py -v && python -c "
+# Explicit verification: observation references remain after content pruning
+from comprehension.store import BeliefStore, ObservationIndex
+from comprehension.schema import Comprehension, BeliefPrior, BeliefPosterior, ConfidenceLevel
+from datetime import datetime, timezone
+import tempfile, os
+
+with tempfile.NamedTemporaryFile(suffix='.db', delete=False) as f:
+    db_path = f.name
+
+store = BeliefStore(db_path)
+comp = Comprehension(
+    id='test-refs',
+    topic='Reference retention test',
+    domain='test',
+    prior=BeliefPrior(statement='Init', confidence=ConfidenceLevel.UNKNOWN, source='test'),
+    observations=['obs-A', 'obs-B'],
+    posterior=BeliefPosterior(statement='Updated', confidence=ConfidenceLevel.MEDIUM, update_reasoning='Test', observations_used=['obs-A']),
+    created=datetime.now(timezone.utc),
+    updated=datetime.now(timezone.utc),
+)
+store.save(comp)
+
+# Prune observation content
+obs_index = store.get_observation_index()
+obs_index.mark_content_pruned('obs-A')
+obs_index.mark_content_pruned('obs-B')
+
+# CRITICAL: comprehension.observations must still contain the IDs
+loaded = store.get('test-refs')
+assert 'obs-A' in loaded.observations, 'obs-A reference lost after pruning!'
+assert 'obs-B' in loaded.observations, 'obs-B reference lost after pruning!'
+assert not obs_index.is_content_available('obs-A'), 'Content should be marked pruned'
+print('STORE-04b verified: observation references retained after content pruned')
+os.unlink(db_path)
+"</verify>
+  <done>ObservationIndex tracks references and pruning status; integrates with ObservationLifecycle; observation references in comprehension.observations persist after content pruning</done>
 </task>
 
 <task type="auto">
